@@ -20,6 +20,10 @@ Fernando Lopez-Lezcano
   Jackdmp changes log
 ---------------------------
 
+2008-05-05 Stephane Letz  <letz@grame.fr>
+
+	* Fix JackClient::Close : notification channel is stopped first to avoid receiving notifications while closing and Close is again a synchronous call.
+
 2008-05-01 Stephane Letz  <letz@grame.fr>
 
 	* Fix JackMachClientChannel::InternalClientLoad.
